Changed course listings to separate courses with and without published exams.

--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -1,7 +1,6 @@
 #main
 
      /* The relative sizes of the parts. */
-     /* NOTE: THESE ARE TOO BIG! THEY CRAM THE COURSE LISTING INTO TOO SMALL SPACE.*/
      !left-width = 23%
      !right-width = 21%
 
@@ -118,6 +117,24 @@
                     table
                          margin: 0px 6px 15px 6px
                
+               .noexams
+                    a
+                         color: #666666
+     
+               #back
+                    margin: 0px 6px 45px 6px
+                    
+                    a
+                         font-weight: bold
+                         border: 1px solid
+                         padding: 2px
+                         
+               #hide-button
+                    margin: 0px 6px 10px 6px
+                    font-weight: bold
+     
+     
+     
      /* Empty right block. */
      #right
           float: right
