--- a/app/views/courses/others.html.haml
+++ b/app/views/courses/others.html.haml
@@ -2,7 +2,10 @@
      = t 'courses.levels.other'
 - content_for :content do
 
-     %p= link_to t('pages.courses.back'), root_url
+     %p#back= link_to t('pages.courses.back'), root_url
+     
+     %p#hide-button
+          %a(href="#hideshow-noexams")=t 'pages.courses.show-hide-unpublished'
 
      %table#other_studies
           %tr
