--- a/app/views/exams/_table.html.haml
+++ b/app/views/exams/_table.html.haml
@@ -1,5 +1,7 @@
 - if exams.empty?
-     %p Empty
+     %p=t 'pages.exams.no_exams'
+     %br
+     %br
 - else
      %table
           - exams.each do |exam|
