--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -6,6 +6,4 @@
      - if @result.empty?
           %p= "Hakusi ei tuottanut tuloksia"
      - else
-          %ul
-               - @result.each do |course|
-                    %li= link_to course.name, exams_url(course.id)
+          %table#search_results= render :partial => "dashboard/courses", :locals => {:courses => @result}                    
