--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
           /[if IE]
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
 
-          = javascript_include_tag 'locales', 'jquery-1.4.2.min', 'jquery-ui-1.8.2.custom.min', 'examinput', 'crumbs', 'niftycube', 'showhide'
+          = javascript_include_tag 'locales', 'jquery-1.4.2.min', 'jquery-ui-1.8.2.custom.min', 'examinput', 'crumbs', 'niftycube', 'showhide', 'jquery.dataTables'
 
           = include_qunit if RAILS_ENV == 'development'
 
@@ -25,6 +25,11 @@
                Nifty("div#box","big");
                }
 
+          %script{:type=> "text/javascript"}
+               $(document).ready(function() {
+               $('#exams').dataTable();
+               } );
+          
      %body
 
           #container
