Fixed localization on database and seeds file.
Added support for pdf outputting tests from the "PDF" button at test listing.

--- a/app/views/exams/_table.html.haml
+++ b/app/views/exams/_table.html.haml
@@ -6,5 +6,4 @@
                %tr
                     %td= link_to exam.type.name, exam_url(exam.course, exam)
                     %td= exam.date
-                    %td= link_to "PDF", exam_url(exam.course, exam)
-                    %td= link_to "TXT", exam_url(exam.course, exam)
+                    %td= link_to "PDF", exam_url(exam.course, exam, :format => :pdf)
