Fixed datatable not showing.

--- a/app/views/exams/_table.html.haml
+++ b/app/views/exams/_table.html.haml
@@ -6,9 +6,9 @@
      %table#exams
           %thead
                %tr
-                    %td Koetyyppi
-                    %td Päivämäärä
-                    %td PDF
+                    %th Koetyyppi
+                    %th Päivämäärä
+                    %th PDF
           %tbody
                - exams.each do |exam|
                     %tr
