--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
           /[if IE]
                = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
 
-          = javascript_include_tag 'locales', 'jquery-1.4.2.min', 'jquery-ui-1.8.2.custom.min', 'examinput', 'crumbs', 'niftycube', 'showhide', 'jquery.dataTables'
+          = javascript_include_tag 'locales', 'jquery-1.4.2.min', 'jquery-ui-1.8.2.custom.min', 'jquery.dataTables.min', 'examinput', 'crumbs', 'niftycube', 'showhide'
 
           = include_qunit if RAILS_ENV == 'development'
 
