--- a/app/views/exams/edit.html.haml
+++ b/app/views/exams/edit.html.haml
@@ -3,10 +3,9 @@
 - content_for :content do
      #exam_info
 
-          - form_for @exam, :url => exams_url do |f|
-               %div= submit_tag t('pages.exams.forms.publish.submit')
-
           %p#name_of_exam= "#{@course.name} - #{@exam.name}"
+          - form_for @exam, :url => exam_url(@course.id, @exam.id) do |f|
+               %div= submit_tag t('pages.exams.forms.publish.submit')
 
      #questions
           %ul
