--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -133,6 +133,26 @@
                     margin: 0px 6px 10px 6px
                     font-weight: bold
      
+               .paginate_disabled_previous
+                    background-image: url('/images/back_disabled.jpg')
+
+
+               .paginate_enabled_previous 
+                    background-image: url('/images/back_enabled.jpg')
+
+
+               .paginate_disabled_next 
+                    background-image: url('/images/forward_disabled.jpg')
+               
+
+               .paginate_enabled_next
+                    background-image: url('/images/forward_enabled.jpg')
+
+               .dataTables_filter
+                    width: 50%
+                    float: right
+                    text-align: right
+
      
      
      /* Empty right block. */
