style tuning: logo (exclamation mark removed, text shadow), exam text, a and a:hover colors and things like that

--- a/app/stylesheets/_basic-style.sass
+++ b/app/stylesheets/_basic-style.sass
@@ -27,12 +27,22 @@ h3
      margin: 2em 0em 1em 0em
      font:
           size: 1.3em
-     text:
-          transform: uppercase
+     line-height: 120%
+     /* text: */
+          /* transform: uppercase */
+
+p
+     margin: 0px 0px 10px 0px
+     line-height: 140%
+
+a
+     color: #27638C
+
+a:hover
+     color: #2d719f
 
 @mixin content-style
      padding: 0.5em
-     /* border: thin solid black */
      font:
           family: Verdana, Arial, Helvetica, sans-serif
        
