--- a/app/views/exams/_questions.html.haml
+++ b/app/views/exams/_questions.html.haml
@@ -4,5 +4,5 @@
      %p Maksimipisteet: #{points}
      - questions.each do |question|
           %h3 #{question.number}. #{question.name} 
-          %pre #{question.description}
+          %p #{question.description}
           %p Pisteet: #{question.points}
