--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -14,7 +14,9 @@
           padding-top: 3.5em
           
           ul
+               /* border-top: 1px dashed black */
                list-style: none
+               margin-top: 80px
                padding: 1em 1em 0 1.5em
                li
                     padding: 0em 0 1em 0
@@ -55,19 +57,14 @@
           /* Styling for the crumbs created with javascript. */
           #breadcrumb
                padding-top: 1em
-     
-
-
 
           /* Content, declared by views. */
           #content
-               
           
                /* Course tables and exam tables. They are named if they need to be styled differently. */
                table
                     margin: 0px 0px 10px 0px
                     width: 100%
-                    /* border-width: 1px 1px 1px 1px */ 
                     border-spacing: 2px
                     border-style: solid
                     border-color: #000
@@ -76,16 +73,13 @@
                     tr
 
                          td
-                              /* border-width: 1px 1px 1px 1px */
-                              /* padding: 3px 6px 3px 6px */
-                              /* border-style: solid */
-                              /* border-color: #000 */
                               background-color: #f2f2f2
                               padding: 7px
                               border-bottom: 1px solid #cccccc
                               border-right: 1px solid #cccccc
+
                          td:hover
-                              background-color: #eaeaea
+                              background-color: #f5f5f5
                          .column1 /* eka sarake */
                               width: 70%
                          .column2 /* toka */
@@ -96,14 +90,14 @@
                                    align: center
                          th
                               font-size: 115%
-                              padding: 1em .5em 1em .5em 
+                              padding: 1em .5em 1em .5em
+
 
                a
-                    color: #000
                     text-decoration: none
                     border-bottom: 1px dashed #cccccc
                a:hover
-                    border-bottom: 1px solid #666666
+                    border-bottom: 2px solid #e7b01f
 
                #examlists
                
@@ -111,22 +105,22 @@
                     
                     h3
                          margin: 0 6px 15px 6px
-               
                     a
-                         text-decoration: underline
+                         /* font-weight: bold */
                     table
-                         margin: 0px 6px 15px 6px
-               
+                         /* margin: 0px 6px 15px 6px */
+                         margin-top: 10px
+                
                .noexams
                     a
-                         color: #666666
+                         /* color: #6699cc */
      
                #back
                     margin: 0px 6px 45px 6px
                     
                     a
                          font-weight: bold
-                         border: 1px solid
+                         /* border: 0px solid */
                          padding: 2px
                          
                #hide-button
