--- a/app/stylesheets/_search.sass
+++ b/app/stylesheets/_search.sass
@@ -16,7 +16,7 @@
      input[type=text]
           margin: 10px
           padding: 5px
-          width: 80%
+          width: 92%
           letter-spacing: 0.15ex
           border: thin solid #666666
           vertical-align: middle
@@ -26,8 +26,8 @@
      input[type=text]:focus
           background-color: #ffffff
           border: thin solid black
-/*     .box */
-/*          background-color: #ccc */
-/*          width: 100% */
-/*          height: 65px */
-/*          margin: 0px auto 0px auto */
+     table
+          width: 100%
+          tr
+               td.submit
+                    width: 24px
