--- a/app/views/layouts/_search.html.haml
+++ b/app/views/layouts/_search.html.haml
@@ -1,5 +1,7 @@
 #search
-     #box
+     #box 
           - form_tag search_path, :method => :get do
-               = text_field_tag :query
-               = image_submit_tag "mag.png"
+               %table
+                    %tr
+                         %td.textfield= text_field_tag :query
+                         %td.submit= image_submit_tag "mag.png"
