Added "font-weight: bold" for courses with exams...

--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -96,6 +96,7 @@
                a
                     text-decoration: none
                     border-bottom: 1px dashed #cccccc
+                    font-weight: bold
                a:hover
                     border-bottom: 2px solid #e7b01f
 
@@ -105,15 +106,14 @@
                     
                     h3
                          margin: 0 6px 15px 6px
-                    a
-                         /* font-weight: bold */
                     table
                          /* margin: 0px 6px 15px 6px */
                          margin-top: 10px
                 
                .noexams
                     a
-                         /* color: #6699cc */
+                         /* color: #ccc */
+                         font-weight: normal
      
                #back
                     margin: 0px 6px 45px 6px
