Added translations for some database models. Removed extra debugging messages. Added name output for questions. Added question data output.

--- a/app/stylesheets/_examinput.sass
+++ b/app/stylesheets/_examinput.sass
@@ -1,3 +1,10 @@
+label + textarea
+     display: block
+
+.question-name
+     width: 300px
+     height: 30px
+
 .question-content
      width: 300px
      height: 150px
