--- a/app/views/exams/edit.html.haml
+++ b/app/views/exams/edit.html.haml
@@ -8,7 +8,6 @@
                %div= submit_tag t('pages.exams.forms.publish.submit')
 
           - unless flash[:errors].nil? or flash[:errors].empty?
-               %p moi
                %ul.errors
                - flash[:errors].each do |error|
                     %li #{error}
@@ -17,7 +16,7 @@
           %ul
                - @exam.questions.each do |question|
                     %li
-                         = link_to "Question ##{question.id}", course_exam_question_url(@course.id, @exam.id, question.id)
+                         = link_to question_name_for_exam_input(question.name), course_exam_question_url(@course.id, @exam.id, question.id)
                          %a(href="#remove")
                               %span.ui-icon.ui-icon-close Remove Tab
                %li.new-question= link_to t('pages.exams.forms.questions.new'), '#new_question', :id => "#{course_exam_path(@course.id, @exam.id)}"
