--- a/app/views/exams/edit.html.haml
+++ b/app/views/exams/edit.html.haml
@@ -11,12 +11,13 @@
                %ul.errors
                - flash[:errors].each do |error|
                     %li #{error}
+          %p#exam_url(style="display:none") #{course_exam_path(@course.id, @exam.id)}
 
      #questions
           %ul
                - @exam.questions.each do |question|
-                    %li
+                    %li(id="question_id-#{question.id}")
                          = link_to question_name_for_exam_input(question.name), course_exam_question_url(@course.id, @exam.id, question.id)
                          %a(href="#remove")
                               %span.ui-icon.ui-icon-close Remove Tab
-               %li.new-question= link_to t('pages.exams.forms.questions.new'), '#new_question', :id => "#{course_exam_path(@course.id, @exam.id)}"
+               %li.new-question= link_to t('pages.exams.forms.questions.new'), '#new_question'
