--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -148,6 +148,23 @@
                     text-align: right
 
      
+               #questions
+
+                    a
+                         border-bottom: none
+
+                    .ui-state-default
+
+                    .ui-state-active
+
+                    .new-question
+
+                    table
+                         tr
+                              td:hover
+                                   background-color: #f2f2f2
+                         
+
      
      /* Empty right block. */
      #right
