Added Image uploading functions and new dependency for paperclip

--- a/app/views/exams/index.html.haml
+++ b/app/views/exams/index.html.haml
@@ -3,7 +3,10 @@
      
 - content_for :content do
      %h2= @course.name
-
+     - form_for :image, :url => image_url, :html => { :multipart => true } do |f|
+          = f.file_field :picture
+          = f.submit
+     
      #examlists
 
           = render :partial => "table", :locals => {:exams => @exams}
