--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -22,7 +22,7 @@
                %div
                     %p= t('pages.exams.forms.questions.image.title')
                     - form_for :image, :url => image_url, :html => { :multipart => true } do |f|
-                         = f.file_field :picture
+                         = f.file_field :question_image
                          = f.submit t('pages.exams.forms.questions.image.submit')
                     %ul 
                          %li
