--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -23,6 +23,7 @@
                     %p= t('pages.exams.forms.questions.image.title')
                     - form_for :image, :url => image_url, :html => { :multipart => true } do |f|
                          = f.file_field :question_image
+                         = hidden_field(:question, :id)
                          = f.submit t('pages.exams.forms.questions.image.submit')
                     %ul 
                          %li
