--- a/app/views/exams/new.html.haml
+++ b/app/views/exams/new.html.haml
@@ -1,5 +1,7 @@
 - content_for :title do
      #{@course.name} :: #{t 'pages.exams.titles.add'}
+- content_for :header do
+     = javascript_include_tag 'examselection'
 - content_for :content do
      %h2= "#{@course.name} - #{t 'pages.exams.titles.add'}"
 
@@ -7,24 +9,23 @@
           %label{:for => :exam_name}= t('pages.exams.forms.selection.name')
           = select_tag :exam_name, options_for_select(exam_selection(@exams), 'new')
 
-     - unless flash[:errors].nil? or flash[:errors].empty?
-          %ul.errors
-          - flash[:errors].each do |error|
-               %li #{error}
-
      - form_for @exam, :url => course_exams_url(@course.id) do |f|
           %div= f.hidden_field :id
           %div
-               = f.label :course, t('pages.exams.forms.newexam.course')
+               = f.label :course
                %span#course{:name => :course}= @course.name
           %div
-               = f.label :type_id, t('pages.exams.forms.newexam.type')
+               = f.label :type_id
                = select_tag 'exam[type_id]', options_for_select(type_selection(@types))
           %div
-               = f.label :date, t('pages.exams.forms.newexam.date')
+               = f.label :date
                = f.text_field :date
           %div
-               = f.label :maximum_points, t('pages.exams.forms.newexam.maxpoints')
+               = f.label :maximum_points
                = f.text_field :maximum_points, :size => 3
           %div= t('pages.exams.forms.newexam.public_notification')
-          %div= submit_tag t('pages.exams.forms.newexam.continue')
+          - unless flash[:errors].nil? or flash[:errors].empty?
+               %ul.errors
+               - flash[:errors].each do |error|
+                    %li #{error}
+          %div= submit_tag t('pages.exams.forms.continue')
