--- a/app/views/exams/generate.html.haml
+++ b/app/views/exams/generate.html.haml
@@ -4,9 +4,11 @@
      %h2= "#{@course.name} - #{t 'pages.exams.titles.generate'}"
 
      - if @exams.empty?
-          %p Koetta ei voida generoida koska tähän kurssiin ei liity yhtään kysymystä.
+          %p= t('pages.exams.forms.generate.cannot_generate')
           
      - else
+     
+          %h3= @alert
           
           - form_tag generate_course_exams_url(@course.id), :method => 'get' do
 
@@ -20,6 +22,6 @@
                          = label_tag ct.theme.name_fi
                %div
                     = check_box_tag 'themeless', 'chosen', true
-                    = label_tag 'Teemattomat'
+                    = label_tag t('pages.exams.forms.generate.themeless')
      
-               %div= submit_tag "Generoi"
+               %div= submit_tag t('pages.exams.forms.generate.generate')
