--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,7 +36,7 @@
                "sInfoEmpty":    "Näytetään 0 - 0 (yhteensä 0)",
                "sInfoFiltered": "(suodatettu _MAX_ tuloksen joukosta)",
                "sInfoPostFix":  "",
-               "sSearch":       "Etsi:",
+               "sSearch":       "Filteröi:",
                "sUrl":          "",
                "oPaginate": {
                "sFirst":    "Ensimmäinen",
