--- a/app/views/exams/create.html.haml
+++ b/app/views/exams/create.html.haml
@@ -16,4 +16,5 @@
 
      #buttons
           %div= button_to t('pages.exams.forms.publish.back'), new_course_exam_url(@course.id), :method => :get
+          #save= button_to t('pages.exams.forms.save'), course_exams_url(:format => :json)
           %div= button_to t('pages.exams.forms.continue'), preview_course_exams_url(@course.id)
