Added changing single questions. It's a checkbox variety for the ease of coding this proto, if customer chooses this version, it will be changed into buttons, and the whole page will be made overall better looking.

--- a/app/views/exams/generate_preview.html.haml
+++ b/app/views/exams/generate_preview.html.haml
@@ -6,13 +6,13 @@
      %p= link_to t('pages.exams.forms.generate.back'), generate_course_exams_url(@course.id)
      
      - if @generated_exam.questions.empty?
-          %p "No match."
+          %p Valitsemillesi teemoille ei löytynyt yhtään kysymystä.
      
      - else
           - form_tag generate_preview_course_exams_url(@course.id), :method => 'get' do
 
           
-               %p Maksimipisteet: 
+               %p Maksimipisteet: #{@generated_exam.maximum_points}
                - @generated_exam.questions.each do |question|
                     %h3 #{question.number}. #{question.name} 
                     %p #{question.description}
