--- a/app/views/exams/generate.html.haml
+++ b/app/views/exams/generate.html.haml
@@ -12,7 +12,7 @@
 
                %div
                     = label_tag "Kuinka monta:"
-                    = select_tag 'number', '<option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>'
+                    = select_tag 'number', '<option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>'
           
                - @course_themes.each do |ct|
                     %div
