--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -147,8 +147,28 @@
                     float: right
                     text-align: right
 
-     
-     
+               div.questionblock
+                    padding: 10px
+                    margin-top: 20px
+                    border: 5px solid #efefef
+                    -moz-border-radius: 15px 15px 15px 15px
+                    background-color: #fbfbfb
+
+               /* Styling for questions */
+               li.question
+                    list-style-type: decimal
+                    list-style-position: outside
+                    margin: 15px 0px 0px 25px
+                    line-height: 150%
+
+               /* Styling for description of question */
+               div.description
+                    margin: 10px 0px 5px 30px 
+
+               /* Styling for question points*/ 
+               div.points
+                    margin: 15px 0px 10px 10px
+
      /* Empty right block. */
      #right
           float: right
