--- a/app/stylesheets/_search.sass
+++ b/app/stylesheets/_search.sass
@@ -3,7 +3,7 @@
           width: 80%
           padding: 20px
           margin: 0 auto
-          background: #efefef
+          background: #ebebeb
           color: #000
      margin: 5px 0px 5px 0px
      padding:
