--- a/app/views/exams/create.html.haml
+++ b/app/views/exams/create.html.haml
@@ -17,4 +17,4 @@
      #buttons
           %div= button_to t('pages.exams.forms.publish.back'), new_course_exam_url(@course.id), :method => :get
           #save= button_to t('pages.exams.forms.save'), course_exams_url(:format => :json)
-          %div= button_to t('pages.exams.forms.continue'), preview_course_exams_url(@course.id)
+          -#%div= button_to t('pages.exams.forms.continue'), preview_course_exams_url(@course.id)
