--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -6,7 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Users: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
-  <%= javascript_include_tag :defaults, 'prototype', 'effects' %>
+  <%= javascript_include_tag :defaults, 'prototype' %>
   <%= javascript_include_tag 'jquery-1.4.2.min' -%>
   <%= active_scaffold_includes %>
   <script type="text/javascript">
