Users, courses, exams quite ok and under admin-folder. Needs more details.

--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -1,1 +1,7 @@
 <%= render :active_scaffold => 'admin/users' %>
+<br>
+<br>
+<%= render :active_scaffold => 'admin/courses' %>
+<br>
+<br>
+<%= render :active_scaffold => 'admin/exams' %>
