Added activescaffold functionality for instances, levels, shortcuts, themes, course_themes and types.

--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -5,3 +5,21 @@
 <br>
 <br>
 <%= render :active_scaffold => 'admin/exams' %>
+<br>
+<br>
+<%= render :active_scaffold => 'admin/themes' %>
+<br>
+<br>
+<%= render :active_scaffold => 'admin/instances' %>
+<br>
+<br>
+<%= render :active_scaffold => 'admin/shortcuts' %>
+<br>
+<br>
+<%= render :active_scaffold => 'admin/levels' %>
+<br>
+<br>
+<%= render :active_scaffold => 'admin/course_themes' %>
+<br>
+<br>
+<%= render :active_scaffold => 'admin/types' %>
