Improved styling for generator features.

--- a/app/views/exams/_questions.html.haml
+++ b/app/views/exams/_questions.html.haml
@@ -7,4 +7,4 @@
                %div.questionblock
                     %li.question #{simple_format(question.name)} 
                     %div.description #{simple_format(question.description)}
-                    %div.points Pisteet: #{question.points}
+                    %div.questionfooter Pisteet: #{question.points}
