--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -60,7 +60,25 @@
 
           /* Content, declared by views. */
           #content
-          
+
+               /* Styling for generator layout */          
+               table.generator
+                    width: auto
+                    
+                    tr
+                         td
+                              margin: 0px
+                              padding: 10px
+                              border: 0px
+                              background-color: #fff
+                              vertical-align: top
+                         td:hover
+                              background-color: #fff
+
+               /* Tiny indent for piece unit in generator */
+               span.pcs
+                    margin-left: 2px
+
                /* Course tables and exam tables. They are named if they need to be styled differently. */
                table
                     margin: 0px 0px 10px 0px
@@ -166,8 +184,21 @@
                     margin: 10px 0px 5px 30px 
 
                /* Styling for question points*/ 
-               div.points
-                    margin: 15px 0px 10px 10px
+               div.questionfooter
+                    margin: 20px 0px 0px 0px
+                    padding: 10px
+                    background-color: #efefef
+                    -moz-border-radius: 5px 5px 5px 5px
+
+                    span.points
+                         display: block
+                         margin: 5px 0px 10px 5px
+                    span.change
+                         display: block
+                         margin: 0px 0px 0px 5px
+
+               div.generatebuttons
+                    margin: 20px 0px 0px 0px
 
      /* Empty right block. */
      #right
