Added prettify and its in action now.

--- a/app/views/exams/create.html.haml
+++ b/app/views/exams/create.html.haml
@@ -4,6 +4,9 @@
      %script(type="text/javascript")
           var dataObject = #{generate_data_object @exam}
      = javascript_include_tag "examedition"
+
+     = stylesheet_link_tag 'prettify.css', :media => 'screen, projection'
+     = javascript_include_tag "prettify/prettify"
 - content_for :content do
      #exam_info
 
