--- a/app/views/exams/new.html.haml
+++ b/app/views/exams/new.html.haml
@@ -5,27 +5,49 @@
 - content_for :content do
      %h2= "#{@course.name} - #{t 'pages.exams.titles.add'}"
 
-     %form#selection
-          %label{:for => :exam_name}= t('pages.exams.forms.selection.name')
-          = select_tag :exam_name, options_for_select(exam_selection(@exams), 'new')
-
      - form_for @exam, :url => course_exams_url(@course.id) do |f|
           %div= f.hidden_field :id
-          %div
-               = f.label :course
-               %span#course{:name => :course}= @course.name
-          %div
-               = f.label :type_id
-               = select_tag 'exam[type_id]', options_for_select(type_selection(@types))
-          %div
-               = f.label :date
-               = f.text_field :date
-          %div
-               = f.label :maximum_points
-               = f.text_field :maximum_points, :size => 3
-          %div= t('pages.exams.forms.newexam.public_notification')
+
+          %table.generator
+               %tr
+                    %td
+                         %label{:for => :exam_name}= t('pages.exams.forms.selection.name')
+                    %td
+                         = select_tag :exam_name, options_for_select(exam_selection(@exams), 'new')
+ 
+               %tr
+                    %td
+                         = f.label :course
+                    %td
+                         %span#course{:name => :course}= @course.name
+               %tr
+                    %td
+                         = f.label :type_id
+                    %td
+                         = select_tag 'exam[type_id]', options_for_select(type_selection(@types))
+               %tr
+                    %td
+                         = f.label :date
+                    %td
+                         = f.text_field :date
+               %tr
+                    %td
+                         = f.label :maximum_points
+                    %td
+                         = f.text_field :maximum_points, :size => 3
+                         %span.pcs
+                              pistettä
+               %tr
+                    %td
+                    %td
+                         = t('pages.exams.forms.newexam.public_notification')
+               %tr
+                    %td
+                    %td
+                         = submit_tag t('pages.exams.forms.continue')
+
           - unless flash[:errors].nil? or flash[:errors].empty?
                %ul.errors
                - flash[:errors].each do |error|
                     %li #{error}
-          %div= submit_tag t('pages.exams.forms.continue')
+
