Added image printing for previews. Also fixed errors in data object saving and updated image model and pdf generation to use the new image save format.

--- a/app/views/exams/_questions.html.haml
+++ b/app/views/exams/_questions.html.haml
@@ -6,5 +6,5 @@
           - questions.each do |question|
                %div.questionblock
                     %li.question #{simple_format(question.name)} 
-                    %div.description #{simple_format(question.description)}
+                    %div.description #{simple_format(question_format(question))}
                     %div.questionfooter Pisteet: #{question.points}
