--- a/app/views/exams/generate_preview.html.haml
+++ b/app/views/exams/generate_preview.html.haml
@@ -18,7 +18,7 @@
                     - @generated_exam.questions.each do |question|
                          %div.questionblock
                               %li.question #{simple_format(question.name)} 
-                              %div.description #{simple_format(question.description)}
+                              %div.description #{simple_format(question_format(question))}
                               %div.questionfooter
                                    %span.points
                                         = t('pages.exams.forms.generate.points') 
