button for Admin done. direct url-access to admin now impossible.

--- a/app/views/layouts/_login.html.haml
+++ b/app/views/layouts/_login.html.haml
@@ -18,3 +18,7 @@
      %span.title #{t('pages.session.logged_in')}:
      #{current_user.username}
      = link_to t('pages.session.logout'), session_url, :method => :delete
+     -# - if moderator?
+     -# = button_to "Admin", :action => "admin/admin"
+     = link_to t('pages.session.admin'), admin_url
+     
