--- a/app/views/layouts/_login.html.haml
+++ b/app/views/layouts/_login.html.haml
@@ -18,7 +18,6 @@
      %span.title #{t('pages.session.logged_in')}:
      #{current_user.username}
      = link_to t('pages.session.logout'), session_url, :method => :delete
-     -# - if moderator?
-     -# = button_to "Admin", :action => "admin/admin"
-     = link_to t('pages.session.admin'), admin_url
+     - if admin?
+          = link_to t('pages.session.admin'), admin_url
      
