Fixed access rights notification.

--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -1,5 +1,8 @@
 #main
 
+     .notifications
+          color: red
+
      /* The relative sizes of the parts. */
      !left-width = 23%
      !right-width = 21%
