--- a/app/views/courses/_courses.html.haml
+++ b/app/views/courses/_courses.html.haml
@@ -7,12 +7,10 @@
         = "(#{course.credits} op)"
 
       %td= link_to t('pages.dashboard.practice'), generate_course_exams_url(course)
-      %td= link_to t('pages.dashboard.addnew'), new_course_exam_url(course)
-
     -else
       %td.noexams
         = course.code
         = link_to "#{course.name}", course_exams_url(course)
         = "(#{course.credits} op)"
       %td.noexams= link_to t('pages.dashboard.practice'), generate_course_exams_url(course)
-      %td.noexams_add= link_to t('pages.dashboard.addnew'), new_course_exam_url(course)
+    %td.column3= link_to t('pages.dashboard.addnew'), new_course_exam_url(course)
