changed search to use correct partial

--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -6,4 +6,4 @@
   - if @result.empty?
     %p= "Hakusi ei tuottanut tuloksia"
   - else
-    %table#search_results= render :partial => "dashboard/courses", :locals => {:courses => @result}
+    %table#search_results= render :partial => "courses/courses", :locals => {:courses => @result}
