--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -8,7 +8,7 @@
     %tr
       %th= t 'courses.levels.basic'
 
-    = render :partial => "courses", :locals => {:courses => @basic_studies}
+    = render :partial => "courses/courses", :locals => {:courses => @basic_studies}
 
   %p= link_to t('pages.courses.showall'), basics_courses_url
 
@@ -16,7 +16,7 @@
     %tr
       %th= t 'courses.levels.intermediate'
 
-    = render :partial => "courses", :locals => {:courses => @intermediate_studies}
+    = render :partial => "courses/courses", :locals => {:courses => @intermediate_studies}
 
   %p= link_to t('pages.courses.showall'), intermediates_courses_url
 
@@ -24,13 +24,13 @@
     %tr
       %th= t 'courses.levels.advanced'
 
-    = render :partial => "courses", :locals => {:courses => @advanced_studies}
+    = render :partial => "courses/courses", :locals => {:courses => @advanced_studies}
 
   %p= link_to t('pages.courses.showall'), advanceds_courses_url
 
   %table#other_studies
     %tr
       %th= t 'courses.levels.other'
-    = render :partial => "courses", :locals => {:courses => @other_studies}
+    = render :partial => "courses/courses", :locals => {:courses => @other_studies}
 
   %p= link_to t('pages.courses.showall'), others_courses_url
