--- a/app/stylesheets/_main.sass
+++ b/app/stylesheets/_main.sass
@@ -113,6 +113,16 @@
             font-size: 115%
             padding: 1em .5em 1em .5em
 
+      tr.noexams
+        td
+          a
+            color: #ccc
+            font-weight: normal
+        td.column3
+          a
+            color: #27638C
+            font-weight: bold
+
 
       a
         text-decoration: none
@@ -130,11 +140,6 @@
         table
           /* margin: 0px 6px 15px 6px */
           margin-top: 10px
-
-      .noexams
-        a
-          color: #ccc
-          font-weight: normal
 
       #back
         margin: 0px 6px 45px 6px
