--- a/app/views/courses/_courses.html.haml
+++ b/app/views/courses/_courses.html.haml
@@ -1,16 +1,9 @@
 - courses.each do |course|
-  %tr
-    -if course.has_exams?
-      %td
-        = course.code
-        = link_to "#{course.name}", course_exams_url(course)
-        = "(#{course.credits} op)"
+  %tr{:class => course.has_exams? ? '' : 'noexams'}
+    %td
+      = course.code
+      = link_to "#{course.name}", course_exams_url(course)
+      = "(#{course.credits} op)"
 
-      %td= link_to t('pages.dashboard.practice'), generate_course_exams_url(course)
-    -else
-      %td.noexams
-        = course.code
-        = link_to "#{course.name}", course_exams_url(course)
-        = "(#{course.credits} op)"
-      %td.noexams= link_to t('pages.dashboard.practice'), generate_course_exams_url(course)
+    %td= link_to t('pages.dashboard.practice'), generate_course_exams_url(course)
     %td.column3= link_to t('pages.dashboard.addnew'), new_course_exam_url(course)
